tests/NormalTests/paczka1/fuzzy1/98518387.err
Error in line 4: yUy A936 39,40
Error in line 5: iJIq6Ssu A195 6,7
Error in line 16: iJIq6Ssu S218 222,5
Error in line 18: yUy A195 95,5
Error in line 32: nfUFbON A195 19,77
Error in line 27: yUy S649 48,1
